<resources>
    <string name="hello">Hello World, WelcomeActivity!</string>
    <string name="app_name">摩尔立方</string>
       <string name="about">关于</string>
    <string name="account_info">账户信息</string>
    <string name="account_name">账户名</string>
    <string name="account_safe">账户安全</string>
    <string name="action_success">操作已成功</string>
    <string name="actual_cost_str">实际扣除: <g>%s</g> 元</string>
    <string name="actual_pay">实际支付:</string>
    <string name="actual_pay_str">实际支付: <g>%s</g> 元</string>
    <string name="add">添加</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="address">所在地</string>
    <string name="advance_repay_penal_rate">提前还款率</string>
    <string name="age">年龄</string>
    <string name="agree">同意</string>
    <string name="allow_categories">适用产品:<g>%s</g></string>
    <string name="alreadyPayCount">还清借款</string>
    <string name="amount">金额</string>
    <string name="and">和</string>
    <string name="assets_manage">资金管理</string>
    <string name="authenticate_action">立即认证</string>
    <string name="authenticate_hint">为保证资金安全，投资前需完成安全认证</string>
    <string name="availableCredits">信用额度</string>
    <string name="available_numbers_title">可购份数</string>
    <string name="available_share_title">可转份数</string>
    <string name="available_try_times_hint">密码错误，还可以再输入<g>%d</g>次</string>
    <string name="avaliable_title">可用金额</string>
    <string name="avatar">头像</string>
    <string name="backaccount_footerview">超过1个月的待收款请前往网站查询</string>
    <string name="backaccount_tips1">未来一个月收款总额(元)</string>
    <string name="backaccount_tips3" formatted="false"><g>%s</g> 至 <g>%s</g> 收款总额</string>
    <string name="balance_to_pay">待付金额</string>
    <string name="bank">银行</string>
    <string name="bank_card">银行卡</string>
    <string name="bank_picker_title">--请选择银行--</string>
    <string name="benefit_stats">累计收益</string>
    <string name="bid">投标</string>
    <string name="bid_amount_hint">需为50元整数倍</string>
    <string name="bid_loan_confirm_title">确认加入</string>
    <string name="bid_loan_success_greetings">恭喜！您已成功投资该标的</string>
    <string name="bid_loan_success_title">加入成功</string>
    <string name="bid_loan_title">散标投资</string>
    <string name="bid_now">立即投标</string>
    <string name="bid_transfered_loan_success_greetings">恭喜！您已成功购买该债权</string>
    <string name="bind_mobile">绑定手机</string>
    <string name="bind_new_mobile">绑定新手机</string>
    <string name="bind_phone">绑定手机</string>
    <string name="birthday">出生日期</string>
    <string name="borrowAmount">借款额度</string>
    <string name="borrow_title">借款负债</string>
    <string name="buy">购买</string>
    <string name="buy_amount">购买份数</string>
    <string name="buy_loan_transfer_confirm_title">确认购买</string>
    <string name="buy_loan_transfer_success_title">购买成功</string>
    <string name="buy_loan_transfer_title">购买债权</string>
    <string name="buy_now">立即购买</string>
    <string name="buy_share_hint">最大可购<g>%d</g>份</string>
    <string name="cancel">取消</string>
    <string name="capture">拍照</string>
    <string name="car">车产</string>
    <string name="carLoan">车贷</string>
    <string name="card_no">卡号</string>
    <string name="card_owner">持卡人</string>
    <string name="cash">提现</string>
    <string name="cash_amount">提现金额</string>
    <string name="cash_below_text">输入人人贷交易密码，即原提现密码</string>
    <string name="cash_fee_amount">提现费用</string>
    <string name="cash_page_bottom_notice">1–2个工作日到账（双休日和法定节假日除外）</string>
    <string name="cash_password">交易密码</string>
    <string name="cash_password_auth">交易密码验证</string>
    <string name="cash_pw_modify">修改密码</string>
    <string name="cash_pw_retrieve">找回密码</string>
    <string name="cash_pwd">交易密码</string>
    <string name="cash_pwd_confirm_hint">请再输入一次</string>
    <string name="cash_pwd_hint">密码(6–16位字母、数字、符号)</string>
    <string name="cash_to_rrd">提现至人人贷账户</string>
    <string name="certificate_title">信用认证标</string>
    <string name="certification">实名认证</string>
    <string name="charge">充值</string>
    <string name="charge_amount">充值金额</string>
    <string name="charge_amount_tip">请输入您要充值的金额</string>
    <string name="charge_card">充值银行卡</string>
    <string name="charge_success">充值成功</string>
    <string name="charge_ticket">充值券</string>
    <string name="charge_ticket_notused">不使用</string>
    <string name="charge_ticket_num">张充值券</string>
    <string name="charge_ticket_tip">"使用充值券将会免除本次充值费用
(优先使用最近到期的充值券)"</string>
    <string name="charge_ticket_used">使用</string>
    <string name="check_update">检查更新</string>
    <string name="click_to_refresh">点此刷新</string>
    <string name="close">关闭</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <string name="confirm_join">确认加入</string>
    <string name="confirm_new_login_password_hint">确认新登录密码</string>
    <string name="confirm_to_cancel_transfer">确认撤销本次债权转让?</string>
    <string name="content">正文</string>
    <string name="contract_template">协议范本</string>
    <string name="cost_money">所需金额</string>
    <string name="coupon">优惠券</string>
    <string name="coupon_hint">输入金额后，系统将自动选择面值最大的可用券</string>
    <string name="coupon_id_info">ID:<g>%s</g></string>
    <string name="coupon_recharge_free">"免费
充值券"</string>
    <string name="coupon_ucode">U-CODE</string>
    <string name="credit_archives">信用档案</string>
    <string name="credit_level_title">信用等级</string>
    <string name="crop_title">设置头像</string>
    <string name="debt_months">借款期限</string>
    <string name="delete">删除</string>
    <string name="deposit_bank">开户行</string>
    <string name="deposit_contract_title">定金说明</string>
    <string name="detail">详情</string>
    <string name="detail_amount">计划金额</string>
    <string name="detail_bid_progress">投标进度</string>
    <string name="detail_buyInRate">加入费率</string>
    <string name="detail_guarantee">保障方式</string>
    <string name="detail_interestRate">服务费用</string>
    <string name="detail_left_time">剩余时间</string>
    <string name="detail_productsJson">投标范围</string>
    <string name="detail_profit_total">累计赚取</string>
    <string name="detail_quitRate">退出费率</string>
    <string name="detail_quiteRateAdvance">提前退出费率</string>
    <string name="dialog_line_spacing_multipiler">1.2</string>
    <string name="disable_coupon">不使用优惠券</string>
    <string name="discount_coupon">优惠券</string>
    <string name="discount_profit_information">"债权转出人在出售债权时，选择在待收本金价格上打折，给予债权购买人折扣的让利行为。 即债权转出人将转让系数设置在100%以下。此行为为折价转让。

用户在购买折价转让债权时，获得的价格差值，称为折让效益。"</string>
    <string name="discount_ratio">转让系数</string>
    <string name="download_complete">下载完成</string>
    <string name="draw_lock_pattern">请绘制解锁图案</string>
    <string name="draw_lock_pattern_again">请再绘制一次</string>
    <string name="dyn_num_success">验证通过</string>
    <string name="easypay">快捷支付</string>
    <string name="edit">编辑</string>
    <string name="empty_amount_warning">金额不能为空</string>
    <string name="empty_bank">抱歉，未找到相关开户行信息</string>
    <string name="empty_loan_hint_1">此列表仅展示7天内的散标</string>
    <string name="empty_loan_hint_2">当新散标发布，就又能看到散标列表了</string>
    <string name="empty_loan_transfer_hint_1">此时暂无转让中的债权</string>
    <string name="empty_loan_transfer_hint_2">仅当有债权转出时，债权列表才可见</string>
    <string name="empty_salary_plan_hint_1">此时暂无薪计划</string>
    <string name="empty_salary_plan_hint_2">仅当有薪计划时，薪计划列表才可见</string>
    <string name="exceed_amount_warning">输入金额超过当前可购买金额</string>
    <string name="exceed_share_to_buy">输入份数超过当前可购买份数</string>
    <string name="exchange">兑换</string>
    <string name="exit">退出登录</string>
    <string name="expand_all">展开全部</string>
    <string name="expect_income_title">预计收入(元)</string>
    <string name="explanation">说明</string>
    <string name="failedCount">严重逾期</string>
    <string name="fee">费用</string>
    <string name="fee_explain_title">费用说明</string>
    <string name="finance_assets">理财资产</string>
    <string name="finance_manage_head_notice">账户净资产（元）</string>
    <string name="finance_plan_invalid_amount_notice">加入金额需为1<g id="unit">%1$s</g>元的整数倍</string>
    <string name="finance_plan_join_money_hint">需为<g>%s</g>的整数倍</string>
    <string name="finance_plan_title">U计划</string>
    <string name="finance_title">理财资产</string>
    <string name="find_new_version">发现新版本</string>
    <string name="for_recharge_only">仅限充值时使用</string>
    <string name="force_quit_gesture_notice">再按一次退出程序</string>
    <string name="forget_lock_pattern">忘记手势密码</string>
    <string name="forget_lock_pattern_to_relogin">忘记手势密码，需重新登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="forum">论坛</string>
    <string name="frozen_title">冻结金额</string>
    <string name="full_time_prefix">满额用时</string>
    <string name="gain_process">收益处理</string>
    <string name="gender">性别</string>
    <string name="gesture_authenticate_password_hint">请输入您的登录密码</string>
    <string name="gesture_authenticate_title">身份验证</string>
    <string name="gesture_password">手势密码</string>
    <string name="gesture_try_too_many_times">您已连续5次输错手势，请重新登录</string>
    <string name="get_banklist_fail_notice">列表加载中，请稍后再试。</string>
    <string name="get_captcha_countdown_text"><g>%d</g>秒重新获取</string>
    <string name="get_smscode">获取验证码</string>
    <string name="get_smscode_success">验证码已发送，请注意查收</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="getting_validate_code">正在获取验证码</string>
    <string name="go_on">继续</string>
    <string name="go_to_user_safe">完成安全认证，开始赚钱</string>
    <string name="graduation">学历</string>
    <string name="hasHouse">房产</string>
    <string name="high">高</string>
    <string name="hint_contact">请留下您的联系方式 QQ/手机/邮箱</string>
    <string name="hint_input_code">请输入优惠券兑换密码</string>
    <string name="hint_plz_set_nickname">请填写昵称（4–16个字符）</string>
    <string name="hint_suggest">请写下您的宝贵意见或建议</string>
    <string name="home_page">首页</string>
    <string name="home_page_title">人人贷</string>
    <string name="houseLoan">房贷</string>
    <string name="i_know">我知道了</string>
    <string name="id_auth">实名认证</string>
    <string name="id_empty">身份证号不能为空</string>
    <string name="idcard">身份证号</string>
    <string name="in_repayment">还款中</string>
    <string name="income_footer">客户端只展示最近三个月的每日收益</string>
    <string name="income_title">当前累计收益(元)</string>
    <string name="input_nickname">请输入您的昵称</string>
    <string name="input_nickname_error">昵称只能为4–16个字符</string>
    <string name="input_number_toast">请输入购买份数</string>
    <string name="input_passwd">请输入密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_confirm">请再输入一次密码</string>
    <string name="input_password_error">密码只能为6–16个字符</string>
    <string name="input_password_not_all_num">密码不可全为数字</string>
    <string name="input_password_not_all_same_char">密码不可为同一字符</string>
    <string name="input_password_not_empty_char">密码不可为空格</string>
    <string name="input_password_not_match">两次输入的密码不一致</string>
    <string name="input_password_wrong_char">请填写符合规则的字符</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_validate_code">请输入短信验证码</string>
    <string name="install_now">立即安装</string>
    <string name="introduce_title">介绍</string>
    <string name="mobile_auth">手机验证</string>
    <string name="next">下一步</string>
    <string name="no_criteria">开户行可打电话或网上查询</string>
    <string name="now_to_pay">立即支付</string>
    <string name="plz_input_cardno">请输入您的银行卡号</string>
    <string name="plz_input_smscode">请输入验证码</string>
    <string name="plz_select_bank">请选择银行</string>
    <string name="register_tip">验证码短信已发送至<g>%s</g></string>
    <string name="register_title_step2">验证手机号</string>
    <string name="retry_validate_code">重新获取</string>
    <string name="rmb_unit">元</string>
    <string name="test" />
    <string name="test_num" />
    <string name="text_balance_pay_bottom">可用金额:</string>
    <string name="tips_add_bank_card">请填写银行卡信息</string>
    <string name="toast_empty_smscode">请输入手机验证码</string>
</resources>