<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/actual_pay_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/actual_pay" style="@style/customStyle.Orange_48" />
    <TextView android:textStyle="bold" android:gravity="bottom" android:id="@id/actual_pay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/test_num" android:singleLine="true" android:layout_toRightOf="@id/actual_pay_title" android:layout_alignBottom="@id/actual_pay_title" style="@style/customStyle.Orange_51" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/rmb_unit" android:layout_toRightOf="@id/actual_pay" android:layout_alignBottom="@id/actual_pay_title" style="@style/customStyle.Orange_48" />
    <TextView android:id="@id/available_amount_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/text_balance_pay_bottom" android:layout_below="@id/actual_pay_title" style="@style/customStyle.MidGrey_38" />
    <TextView android:id="@id/tv_available_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/test_num" android:singleLine="true" android:layout_toRightOf="@id/available_amount_title" android:layout_alignBottom="@id/available_amount_title" style="@style/customStyle.MidGrey_38" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/rmb_unit" android:singleLine="true" android:layout_toRightOf="@id/tv_available_amount" android:layout_alignBottom="@id/available_amount_title" style="@style/customStyle.MidGrey_38" />
    <Button android:id="@id/btn_pay" android:background="@drawable/shape_orange_bg_selector" android:layout_width="120.0dip" android:layout_height="@dimen/button_height" android:text="@string/now_to_pay" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/customStyle.White_48" />
</RelativeLayout>