<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="9.0dip" android:text="@string/charge_card" style="@style/customStyle.DarkGrey_42" />
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="7.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_no" android:minEms="3" style="@style/customStyle.LightBlack_42" />
            <EditText android:textColorHint="@color/hint_color" android:id="@id/edtCardNo" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/plz_input_cardno" android:ems="10" android:maxLength="23" android:layout_weight="1.0" style="@style/customStyle.LightBlack_42">
                <requestFocus />
            </EditText>
            <TextView android:gravity="left" android:id="@id/tvCardNo" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/customStyle.LightBlack_42" />
            <ImageView android:id="@id/icon_select_from_binded_card" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/binded_card" android:contentDescription="@null" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" android:layout_marginLeft="17.0dip" android:layout_marginRight="17.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_bank_picker" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bank" android:minEms="3" style="@style/customStyle.LightBlack_42" />
            <TextView android:textColorHint="@color/hint_color" android:id="@id/tvBankName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/plz_select_bank" android:drawableRight="@drawable/right_arrow" android:drawablePadding="15.0dip" android:layout_weight="1.0" style="@style/customStyle.LightBlack_42" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="9.0dip" android:text="@string/charge_amount" style="@style/customStyle.DarkGrey_42" />
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:id="@id/txtChargeAmount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/amount" android:minEms="3" style="@style/customStyle.LightBlack_42" />
            <EditText android:textColor="@color/black" android:textColorHint="@color/hint_color" android:ellipsize="end" android:gravity="bottom|left|center" android:id="@id/edtChargeAmount" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:hint="@string/charge_amount_tip" android:scrollHorizontally="true" android:singleLine="true" android:maxLength="9" android:layout_weight="1.0" android:inputType="numberDecimal" android:isScrollContainer="true" style="@style/customStyle.LightBlack_42" />
            <TextView android:id="@id/tv_rmb1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rmb_unit" style="@style/customStyle.LightBlack_42" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" android:layout_marginLeft="17.0dip" android:layout_marginRight="17.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fee" android:minEms="3" style="@style/customStyle.LightBlack_42" />
            <TextView android:gravity="right" android:id="@id/txtChargeCost" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:layout_weight="1.0" style="@style/customStyle.Black_22" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rmb_unit" style="@style/customStyle.LightBlack_42" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/llChargeTicket" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <include layout="@layout/dash_separator_with_margin" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/charge_ticket" android:minEms="3" style="@style/customStyle.LightBlack_42" />
                <TextView android:textSize="13.0sp" android:textColor="@color/blue_common" android:gravity="center" android:id="@id/tvChargeTicketNum" android:background="@drawable/charge_ticket" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/test" style="@style/customStyle.Black_22" />
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <TextView android:id="@id/tvUseChargeTicket" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableRight="@drawable/right_arrow" android:drawablePadding="5.0dip" style="@style/customStyle.Grey_22" />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/dash_separator_with_margin" />
        <TextView android:gravity="right|center" android:id="@id/tvActualCost" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height" android:text="@string/actual_pay_str" style="@style/customStyle.Orange_48" />
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <TextView android:id="@id/txtChargeRate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="17.0dip" android:layout_marginBottom="10.0dip" android:drawableLeft="@drawable/grey_point" android:drawablePadding="7.0dip" style="@style/customStyle.MidGrey_22" />
        <Button android:enabled="false" android:layout_gravity="center_horizontal" android:id="@id/next" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="17.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="17.0dip" android:text="@string/next" style="@style/commonBlueButton" />
    </LinearLayout>
</ScrollView>