<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/common_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="9.0dip" android:layout_marginRight="17.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/register_stage2" android:contentDescription="@null" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_title_step2" android:layout_centerInParent="true" style="@style/customStyle.DarkGreen_51" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="11.0dip" android:layout_marginRight="17.0dip">
        <EditText android:textColorHint="@color/hint_color" android:layout_gravity="center_vertical" android:id="@id/edtValidateCode" android:background="@drawable/round_corner_rectangle_white_background" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="@dimen/simple_edit_height" android:hint="@string/plz_input_smscode" android:layout_weight="1.0" style="@style/customStyle.DarkGreen_51" />
        <Button android:enabled="false" android:gravity="center" android:id="@id/btnRetry" android:background="@drawable/button_blue_bg_selector" android:layout_width="110.0dip" android:layout_height="fill_parent" android:layout_marginLeft="13.0dip" android:text="@string/retry_validate_code" style="@style/customStyle.White_51" />
    </LinearLayout>
    <Button android:gravity="center" android:id="@id/btnValidateCode" android:background="@drawable/button_blue_bg_selector" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="17.0dip" android:layout_marginTop="21.329987dip" android:layout_marginRight="17.0dip" android:text="@string/next" style="@style/customStyle.White_51" />
    <TextView android:id="@id/txtTip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip" android:layout_marginTop="13.0dip" android:layout_marginRight="17.0dip" android:text="@string/register_tip" android:drawableLeft="@drawable/exclamation_mark" android:drawablePadding="5.0dip" />
</LinearLayout>