<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_vertical" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tips_add_bank_card" style="@style/customStyle.DarkGrey_42" />
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_owner" android:minEms="4" style="@style/customStyle.LightBlack_42" />
            <TextView android:id="@id/card_owner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/customStyle.LightBlack_42" />
            <ImageView android:id="@id/card_owner_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/info" android:contentDescription="@null" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" android:layout_marginLeft="17.0dip" android:layout_marginRight="17.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_bank_picker" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bank" android:minEms="4" style="@style/customStyle.LightBlack_42" />
            <TextView android:textColorHint="@color/hint_color" android:id="@id/picked_bank" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/plz_select_bank" android:layout_weight="1.0" style="@style/customStyle.LightBlack_42" />
            <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right_arrow" android:layout_weight="0.0" android:contentDescription="@null" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" android:layout_marginLeft="17.0dip" android:layout_marginRight="17.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_no" android:minEms="4" style="@style/customStyle.LightBlack_42" />
            <EditText android:textColorHint="@color/hint_color" android:id="@id/card_num" android:background="@null" android:longClickable="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/plz_input_cardno" android:maxLength="23" android:layout_weight="1.0" android:inputType="number" style="@style/customStyle.LightBlack_42" />
            <ImageView android:id="@id/clear" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/icon_clear" android:contentDescription="@null" />
            <ImageView android:id="@id/scan_card" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_scan_card" android:contentDescription="@null" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" android:layout_marginLeft="17.0dip" android:layout_marginRight="17.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_address" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/address" android:minEms="4" style="@style/customStyle.LightBlack_42" />
            <TextView android:textColorHint="@color/hint_color" android:ellipsize="middle" android:id="@id/address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" style="@style/customStyle.LightBlack_42" />
            <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right_arrow" android:layout_weight="0.0" android:contentDescription="@null" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" android:layout_marginLeft="17.0dip" android:layout_marginRight="17.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_opening_bank" android:background="@color/white" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/deposit_bank" android:minEms="4" style="@style/customStyle.LightBlack_42" />
            <TextView android:textColorHint="@color/hint_color" android:ellipsize="middle" android:id="@id/opening_bank" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/no_criteria" android:singleLine="true" android:layout_weight="1.0" style="@style/customStyle.LightBlack_42" />
            <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right_arrow" android:layout_weight="0.0" android:contentDescription="@null" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <TextView android:gravity="center_vertical" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mobile_auth" style="@style/customStyle.DarkGrey_42" />
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/simple_list_height">
            <EditText android:textColorHint="@color/hint_color" android:layout_gravity="center_vertical" android:id="@id/cet_smscode" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:hint="@string/toast_empty_smscode" android:maxLength="10" android:layout_weight="1.0" android:inputType="number" style="@style/customStyle.LightBlack_42" />
            <View android:background="@drawable/gray_line" android:layout_width="@dimen/grey_line_height" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" />
            <TextView android:gravity="center" android:id="@id/gen_smscode" android:background="@drawable/list_selector" android:layout_width="110.0dip" android:layout_height="fill_parent" android:text="@string/get_smscode" style="@style/customStyle.Blue_42" />
        </LinearLayout>
        <View android:background="@drawable/gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/grey_line_height" />
        <Button android:id="@id/add" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="17.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="17.0dip" android:text="@string/add" style="@style/commonBlueButton" />
    </LinearLayout>
</ScrollView>